# emova

./: .gitignore  Dockerfile  EMOVA.spec  README.md  main.py  patch.diff  pyproject.toml  scratch_inspect.py  scratch_test_api.py  test_pipeline.py  test_run.py  uv.lock.backup
context/: database.md  general.md
docs/: 4_7_preprocesamiento.md  roadmap_faltantes.md
src/: main.py
src/emova/: main.py
src/emova.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/emova/api/: README.md  main.py
src/emova/api/core/: config.py  email.py  security.py  storage.py
src/emova/api/db/: database.py
src/emova/api/models/: evaluador.py  report.py  reporte.py  test_template.py  token.py  types.py  user.py
src/emova/api/routers/: __init__.py  auth.py  evaluadores.py  reportes.py  reports.py  tests.py  users.py
src/emova/capture/: camera.py
src/emova/client/: api_client.py
src/emova/client/gui/: camera_thread.py  main_window.py
src/emova/client/gui/assets/: style.qss
src/emova/client/gui/components/: calibration_overlay.py  custom_dialog.py  header.py  history_dialog.py  sidebar.py  survey_dialog.py  task_overlay.py  video_player.py
src/emova/core/capture/: camera.py  fps_sampler.py
src/emova/core/model/: emotion_predictor.py
src/emova/core/reporting/: __init__.py  report_generator.py
src/emova/core/session/: session_manager.py  task_manager.py
src/emova/core/storage/: emotion_logger.py
src/emova/core/vision/: emotion_model.py  face_cropper.py  face_detector.py  focus_validator.py  pipeline.py  preprocess.py
src/emova/gui/: camera_thread.py  main_window.py
src/emova/gui/components/: header.py  sidebar.py  video_player.py
src/emova/gui/resources/: style.qss
src/emova/gui/views/: dashboard.py  edit_tasks.py  password_recovery.py  register_participant.py  register_task.py
src/emova/model/: emotion_predictor.py
(+10 files in other folders)
