[project]
name = "emova"
version = "0.1.0"
description = "Emotion Monitoring and Visual Analysis system"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "opencv-python",
    "numpy",
    "onnxruntime",
    "pyside6",
    "matplotlib",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]